--- a/libs/ui/src/lib/card-tile/card-tile.component.html
+++ b/libs/ui/src/lib/card-tile/card-tile.component.html
@@ -1,16 +1,16 @@
 <!-- <div class="cards-enclosing-container"> -->
-        <mat-card class="outer-card">
-                <mat-card class="inner-book-card">
-                    <img mat-card-image [src]=smallThumbnail class="book-thumbnail">
-                    <mat-card-content>
-                        <p>
-                            {{bookDescription | slice:0:100}}
-                        </p>
-                    </mat-card-content>
-                    <mat-card-actions>
+<mat-card class="outer-card">
+  <mat-card class="inner-book-card">
+    <img mat-card-image [src]="smallThumbnail" class="book-thumbnail" />
+    <mat-card-content>
+      <p>
+        {{ bookDescription | slice: 0:100 }}
+      </p>
+    </mat-card-content>
+    <!-- <mat-card-actions>
                         <button mat-raised-button>Add To Cart</button>
                         <button mat-raised-button>Buy Now</button>
-                    </mat-card-actions>
-                </mat-card>
-            </mat-card>
+                    </mat-card-actions> -->
+  </mat-card>
+</mat-card>
 <!-- </div> -->
