--- a/apps/enlight/src/app/app.component.html
+++ b/apps/enlight/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="main-container">
-  <ui-side-nav class="ui-sidenav-container"></ui-side-nav>
+  <workspace-ui-side-nav class="ui-sidenav-container"></workspace-ui-side-nav>
 </div>
