--- a/apps/enlight/src/app/collection/component/collection.component.html
+++ b/apps/enlight/src/app/collection/component/collection.component.html
@@ -1,3 +1,7 @@
 <div class="collection-wrapper">
-  <div class="search-wrapper"><ui-search-bar [placeholder]="'Search in Collection'"></ui-search-bar></div>
+  <div class="search-wrapper">
+    <workspace-ui-search-bar
+      [placeholder]="'Search in Collection'"
+    ></workspace-ui-search-bar>
+  </div>
 </div>
