--- a/apps/enlight/src/app/home/component/home.component.html
+++ b/apps/enlight/src/app/home/component/home.component.html
@@ -1,8 +1,10 @@
 <div class="home-wrapper">
   <div class="search-wrapper">
-    <ui-search-bar [placeholder]="'Search in Library'"></ui-search-bar>
+    <workspace-ui-search-bar
+      [placeholder]="'Search in Library'"
+    ></workspace-ui-search-bar>
   </div>
-  <card-tile
+  <workspace-card-tile
     *ngFor="let tilesData of booksRecords$ | async"
     [bookTitle]="tilesData.volumeInfo.title"
     [bookSubTitle]="tilesData.volumeInfo.subtitle"
@@ -10,5 +12,5 @@
     [bookDescription]="tilesData.volumeInfo.description"
     (click)="OnBookSelect(tilesData.id)"
   >
-  </card-tile>
+  </workspace-card-tile>
 </div>
