--- a/apps/enlight/src/app/Detail/component/detail.component.html
+++ b/apps/enlight/src/app/Detail/component/detail.component.html
@@ -18,7 +18,9 @@
         />
         <mat-card-actions>
           <button mat-button class="addtocard-btn book-btn">ADD TO CART</button>
-          <button mat-button class="buy-btn book-btn">BUY</button>
+          <button mat-button class="buy-btn book-btn" (click)="purchaseBook()">
+            BUY
+          </button>
         </mat-card-actions>
       </mat-card>
     </div>
