Changed text field to textarea for address input in billing page

--- a/apps/enlight/src/app/billing/billing.component.html
+++ b/apps/enlight/src/app/billing/billing.component.html
@@ -37,12 +37,14 @@
       <mat-error>Missing phone number.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input
+      <textarea
         type="address"
         matInput
         placeholder="Your address"
         formControlName="address"
-      />
+      >
+      </textarea>
+
       <mat-hint>Please enter your address.</mat-hint>
       <mat-error>Missing address.</mat-error>
     </mat-form-field>
