Code changes to navigate back to home page on purchase confirmation

--- a/apps/enlight/src/app/purchase-confirmation/purchase-confirmation.component.html
+++ b/apps/enlight/src/app/purchase-confirmation/purchase-confirmation.component.html
@@ -2,7 +2,13 @@
   {{ message }}
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-raised-button color="primary" mat-dialog-close tabindex="-1">
+  <button
+    mat-raised-button
+    color="primary"
+    mat-dialog-close
+    tabindex="-1"
+    (click)="onConfirmClick()"
+  >
     {{ cancelButtonText }}
   </button>
 </mat-dialog-actions>
