--- a/libs/ui/src/lib/side-nav/side-nav.component.html
+++ b/libs/ui/src/lib/side-nav/side-nav.component.html
@@ -1,13 +1,19 @@
 <mat-toolbar color="primary" class="top-toolbar">
   <mat-toolbar-row>
-    <button mat-icon-button (click)="sideNav.toggle()"><mat-icon>menu</mat-icon></button>
+    <button mat-icon-button (click)="sideNav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
     <h1 class="app-name">EnLight</h1>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #sideNav [mode]="'over'">
+  <mat-sidenav #sideNav [mode]="'side'" [opened]="true">
     <mat-nav-list>
-      <a mat-list-item [routerLink]="navItem.path" *ngFor="let navItem of navigationList" (click)="sideNav.toggle()">
+      <a
+        mat-list-item
+        [routerLink]="navItem.path"
+        *ngFor="let navItem of navigationList"
+      >
         <mat-icon class="sidenav-icon">{{ navItem.icon }}</mat-icon
         >{{ navItem.desc }}</a
       >
