Tool bar color change

--- a/libs/ui/src/lib/side-nav/side-nav.component.scss
+++ b/libs/ui/src/lib/side-nav/side-nav.component.scss
@@ -13,6 +13,10 @@
   background: transparent;
 }
 .mat-nav-list .mat-list-item:hover {
-  background: #e20074;
+  background: #e20069;
+  color: #fff;
+}
+.mat-toolbar.mat-primary {
+  background: #e20069;
   color: #fff;
 }
