Making use of angular material badge

--- a/libs/ui/src/lib/side-nav/side-nav.component.html
+++ b/libs/ui/src/lib/side-nav/side-nav.component.html
@@ -14,9 +14,11 @@
         [routerLink]="navItem.path"
         *ngFor="let navItem of navigationList"
       >
-        <mat-icon class="sidenav-icon">{{ navItem.icon }}</mat-icon
-        >{{ navItem.desc }}</a
-      >
+        <mat-icon class="sidenav-icon">{{ navItem.icon }}</mat-icon>
+        <span [matBadge]="navItem.badgeValue" matBadgeOverlap="false">{{
+          navItem.desc
+        }}</span>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
