Adding basic cart and collection functionality

--- a/apps/enlight/src/app/collection/component/collection.component.html
+++ b/apps/enlight/src/app/collection/component/collection.component.html
@@ -1,7 +1,5 @@
-<div class="collection-wrapper">
-  <div class="search-wrapper">
-    <workspace-ui-search-bar
-      [placeholder]="'Search in Collection'"
-    ></workspace-ui-search-bar>
+<div *ngIf="collectionBooks">
+  <div *ngFor="let book of collectionBooks">
+    {{ book.volumeInfo.title }}
   </div>
 </div>
