--- a/apps/enlight/src/app/components/search-bar/search-bar.component.html
+++ b/apps/enlight/src/app/components/search-bar/search-bar.component.html
@@ -1,9 +1,14 @@
 <form class="search-form">
   <mat-form-field class="inline-block">
-    <input matInput [placeholder]="placeholder" class="search-input" [(ngModel)]="searchInput" (keyup)="onKeyUp()"
-      name="searchInput" />
+    <input
+      matInput
+      [placeholder]="placeholder"
+      class="search-input"
+      [(ngModel)]="searchInput"
+      name="searchInput"
+    />
   </mat-form-field>
-  <button mat-button class="search-btn" (click)=onSearch()>
+  <button mat-button class="search-btn" (click)="onSearch()">
     <mat-icon aria-hidden="false" aria-label="Search Button">search</mat-icon>
   </button>
 </form>
