--- a/apps/enlight/src/app/components/detail/detail.component.scss
+++ b/apps/enlight/src/app/components/detail/detail.component.scss
@@ -1,26 +1,92 @@
+.detail-card-outer {
+  box-shadow: 3px 4px 12px 0px #888888;
+  width: 90%;
+  height: 80%;
+
+  display: inline-flex;
+}
+.detail-card-inner {
+  width: 400px;
+  display: inline-block;
+  height: 250px;
+}
 .detail-book-thumbnail {
   text-align: left;
   display: block;
   margin-left: 5px;
   margin-top: 5px;
-  max-width: 200px;
+  max-width: 220px;
   max-height: 250px;
   max-block-size: 250px;
 }
+.detail-wrapper {
+  margin-left: 40px;
+}
+.detail-content {
+  min-height: 275px;
+  max-height: 600px;
+  max-width: 800px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+.detail-header {
+  color: #212121;
+  font-size: 30px;
+  font-weight: 1000;
+  line-height: 35px;
+  margin: 25px 0 10px 0;
+  text-align: left;
+  display: inline;
+}
+.detail-info {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+//  /* styles below*/
+
+//   /* book card styles */
+
 .book-detail-hldr {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   padding: 10px;
+  background-color: #e0e0e0;
 }
 .card-hldr {
   flex: 1;
-  background-color: #e0e0e0;
 }
 .book-info-hldr {
+  flex: 3;
+  padding: 15px;
+}
+.book-info-hldr .book-info-inner-hldr {
+  background-color: white;
+  padding: 20px;
+  border-radius: 4px;
+}
+.book-info-inner-hldr .book-title {
   flex: 1;
-  padding: 50px 15px 15px 15px;
-  background-color: #e0e0e0;
+  font-size: 25px;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+.book-info-inner-hldr .book-subtitle {
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  color: rgba(0, 0, 0, 0.54);
+  font-style: italic;
+}
+.horizontal-line {
+  padding-bottom: 20px;
+}
+.book-info-inner-hldr .description-header div {
+  padding: 2px 10px;
+}
+.book-info-inner-hldr .description-header .rating-div {
+  padding: 15px 10px 0px 10px;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  color: rgba(0, 0, 0, 0.54);
 }
 .description-hldr {
   display: flex;
@@ -31,13 +97,21 @@
   font-weight: bold;
 }
 .description-detail {
-  flex: 1;
+  flex: 4;
 }
 .inner-card-hldr {
   padding: 15px;
 }
 .book-title {
   font-weight: bold;
+}
+.book-action-btns {
+  text-align: center;
+  top: 400px;
+  padding-bottom: 20px !important;
+}
+.book-action-btns button {
+  width: 120px;
 }
 .book-btn {
   background-color: orange;
@@ -56,17 +130,3 @@
   }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-}
