changes to have stiky toolbar

--- a/apps/enlight/src/app/components/side-nav/side-nav.component.scss
+++ b/apps/enlight/src/app/components/side-nav/side-nav.component.scss
@@ -19,4 +19,8 @@
 .mat-toolbar.mat-primary {
   background: #e20069;
   color: #fff;
+  position: sticky;
+  position: -webkit-sticky; /* For macOS/iOS Safari */
+  top: 0; /* Sets the sticky toolbar to be on top */
+  z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
 }
