Code changes for length check

--- a/apps/enlight/src/app/components/collection/collection.component.html
+++ b/apps/enlight/src/app/components/collection/collection.component.html
@@ -1,4 +1,4 @@
-<div class="book-detail-hldr">
+<div class="book-detail-hldr" *ngIf="collectionBooks.length">
   <div class="card-hldr">
     <div class="inner-card-hldr" *ngFor="let book of collectionBooks">
       <mat-card class="book-info-card">
