--- a/apps/enlight/src/app/components/collection/collection.component.scss
+++ b/apps/enlight/src/app/components/collection/collection.component.scss
@@ -1,132 +1,28 @@
-.detail-card-outer {
-  box-shadow: 3px 4px 12px 0px #888888;
-  width: 90%;
-  height: 80%;
+.collectionCards {
+  background-color: #f6f6f6;
+  width: 95%;
+  margin: 10px 2.5% 0px;
+  clear: both;
 
-  display: inline-flex;
-}
-.detail-card-inner {
-  width: 400px;
-  display: inline-block;
-  height: 250px;
-}
-.detail-book-thumbnail {
-  text-align: left;
-  display: block;
-  margin-left: 5px;
-  margin-top: 5px;
-  max-width: 220px;
-  max-height: 250px;
-  max-block-size: 250px;
-}
-.detail-wrapper {
-  margin-left: 40px;
-}
-.detail-content {
-  min-height: 275px;
-  max-height: 600px;
-  max-width: 800px;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-.detail-header {
-  color: #212121;
-  font-size: 30px;
-  font-weight: 1000;
-  line-height: 35px;
-  margin: 25px 0 10px 0;
-  text-align: left;
-  display: inline;
-}
-.detail-info {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-//  /* styles below*/
-
-//   /* book card styles */
-
-.book-detail-hldr {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  padding: 10px;
-  background-color: #e0e0e0;
-}
-.card-hldr {
-  flex: 1;
-}
-.book-info-hldr {
-  flex: 3;
-  padding: 15px;
-}
-.book-info-hldr .book-info-inner-hldr {
-  background-color: white;
-  padding: 20px;
-  border-radius: 4px;
-}
-.book-info-inner-hldr .book-title {
-  flex: 1;
-  font-size: 25px;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-}
-.book-info-inner-hldr .book-subtitle {
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-  color: rgba(0, 0, 0, 0.54);
-  font-style: italic;
-}
-.horizontal-line {
-  padding-bottom: 20px;
-}
-.book-info-inner-hldr .description-header div {
-  padding: 2px 10px;
-}
-.book-info-inner-hldr .description-header .rating-div {
-  padding: 15px 10px 0px 10px;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-  color: rgba(0, 0, 0, 0.54);
-}
-.description-hldr {
-  display: flex;
-  padding: 10px;
-}
-.description-title {
-  flex: 1;
-  font-weight: bold;
-}
-.description-detail {
-  flex: 4;
-}
-.inner-card-hldr {
-  padding: 15px;
-}
-.book-title {
-  font-weight: bold;
-}
-.book-action-btns {
-  text-align: center;
-  top: 400px;
-  padding-bottom: 20px !important;
-}
-.book-action-btns button {
-  width: 120px;
-}
-.book-btn {
-  background-color: orange;
-  color: white;
-  border: none;
-  padding: 5px 10px 5px 10px;
-}
-.addtocard-btn {
-  margin-right: 20px;
-}
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  .book-detail-hldr {
+  div.header {
+    background-color: #ddd;
     display: flex;
-    flex-direction: column;
+
+    img {
+      flex: 1;
+      height: 100px;
+      width: 100px;
+    }
+
+    .header-details {
+      flex: 10;
+      margin-left: 10px;
+    }
+
+    mat-card-title span.published {
+      font-size: 10px;
+      font-style: italic;
+      font-weight: normal;
+    }
   }
 }
-/* Small devices (portrait tablets and large phones, 600px and up) */
