--- a/apps/enlight/src/app/components/home/home.component.html
+++ b/apps/enlight/src/app/components/home/home.component.html
@@ -10,6 +10,7 @@
     [bookSubTitle]="tilesData.volumeInfo.subtitle"
     [smallThumbnail]="tilesData.volumeInfo.imageLinks?.smallThumbnail"
     [bookDescription]="tilesData.volumeInfo.description"
+    [bookAuthors]="tilesData.volumeInfo.authors"
     (click)="OnBookSelect(tilesData.id)"
   >
   </workspace-card-tile>
