Search results mat card content height change

--- a/apps/enlight/src/app/components/card-tile/card-tile.component.scss
+++ b/apps/enlight/src/app/components/card-tile/card-tile.component.scss
@@ -30,13 +30,14 @@ img {
 mat-card-content {
   margin-top: 15px;
   margin: 15px 0 0;
+  height: 50px;
 }
 span {
   display: inline-block;
   font-size: 13px;
 }
 mat-card-footer {
-  margin: 15px 0 0;
+  margin: 0px;
 }
 
 h5 {
