--- a/apps/enlight/src/app/components/card-tile/card-tile.component.html
+++ b/apps/enlight/src/app/components/card-tile/card-tile.component.html
@@ -16,12 +16,13 @@
   </mat-card-title-group>
   <mat-card-content>
     <p *ngIf="bookDescription">{{ bookDescription | ellipsis }}</p>
+  </mat-card-content>
+  <mat-card-footer>
     <h5>Written By:</h5>
     <span>
       {{ bookAuthors | addCommas }}
     </span>
-  </mat-card-content>
-  <mat-card-footer> </mat-card-footer>
+  </mat-card-footer>
 </mat-card>
 
 <!-- <a>
