--- a/apps/enlight/src/app/components/billing/billing.component.html
+++ b/apps/enlight/src/app/components/billing/billing.component.html
@@ -2,7 +2,7 @@
   <mat-card-content class="home-card-content">
     <img
       mat-card-image
-      src="../../../assets/images/point-right.jpg"
+      src="../../../assets/images/receipt.jpg"
       alt="Photo of a Shiba Inu"
     />
     <div>
