Changed color of buttons as per application theme

--- a/apps/enlight/src/app/components/cart/cart.component.scss
+++ b/apps/enlight/src/app/components/cart/cart.component.scss
@@ -45,7 +45,7 @@ h5 {
   padding: 0px;
 }
 .book-btn {
-  background-color: orange;
+  background-color: #e20069;
   color: white;
   border: none;
   padding: 5px 10px 5px 10px;
