--- a/apps/enlight/src/app/components/detail/detail.component.scss
+++ b/apps/enlight/src/app/components/detail/detail.component.scss
@@ -114,7 +114,7 @@
   width: 120px;
 }
 .book-btn {
-  background-color: orange;
+  background-color: #e20069;
   color: white;
   border: none;
   padding: 5px 10px 5px 10px;
