--- a/apps/enlight/src/app/components/detail/detail.component.scss
+++ b/apps/enlight/src/app/components/detail/detail.component.scss
@@ -1,85 +1,44 @@
-.detail-card-outer {
-  box-shadow: 3px 4px 12px 0px #888888;
-  width: 90%;
-  height: 80%;
-
-  display: inline-flex;
-}
-.detail-card-inner {
-  width: 400px;
-  display: inline-block;
-  height: 250px;
-}
-.detail-book-thumbnail {
-  text-align: left;
-  display: block;
-  margin-left: 5px;
-  margin-top: 5px;
-  max-width: 220px;
-  max-height: 250px;
-  max-block-size: 250px;
-}
-.detail-wrapper {
-  margin-left: 40px;
-}
-.detail-content {
-  min-height: 275px;
-  max-height: 600px;
-  max-width: 800px;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-.detail-header {
-  color: #212121;
-  font-size: 30px;
-  font-weight: 1000;
-  line-height: 35px;
-  margin: 25px 0 10px 0;
-  text-align: left;
-  display: inline;
-}
-.detail-info {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-//  /* styles below*/
-
-//   /* book card styles */
-
-.book-detail-hldr {
+:host {
   display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  padding: 10px;
-  background-color: #e0e0e0;
+  justify-content: center;
+  margin: 75px 0;
 }
-.card-hldr {
-  flex: 1;
+mat-card {
+  max-width: 900px;
 }
-.book-info-hldr {
-  flex: 3;
-  padding: 15px;
+mat-card-title-group {
+  margin-left: 0;
 }
-.book-info-hldr .book-info-inner-hldr {
-  background-color: white;
-  padding: 20px;
-  border-radius: 4px;
+img {
+  width: 60px;
+  min-width: 60px;
+  margin-left: 5px;
 }
-.book-info-inner-hldr .book-title {
-  flex: 1;
-  font-size: 25px;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+mat-card-content {
+  margin: 15px 0 50px;
 }
-.book-info-inner-hldr .book-subtitle {
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-  color: rgba(0, 0, 0, 0.54);
-  font-style: italic;
+mat-card-actions {
+  margin: 25px 0 0 !important;
 }
-.horizontal-line {
-  padding-bottom: 20px;
+mat-card-footer {
+  padding: 0 25px 25px;
+  position: relative;
 }
+h5 {
+  margin-bottom: 5px;
+}
+
+.description-hldr {
+  display: flex;
+}
+.description-title {
+  flex: 0.5;
+  font-weight: bold;
+}
+.description-detail {
+  flex: 4;
+}
+
 .book-info-inner-hldr .description-header div {
   padding: 2px 10px;
 }
@@ -88,28 +47,6 @@
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   color: rgba(0, 0, 0, 0.54);
 }
-.description-hldr {
-  display: flex;
-  padding: 10px;
-}
-.description-title {
-  flex: 1;
-  font-weight: bold;
-}
-.description-detail {
-  flex: 4;
-}
-.inner-card-hldr {
-  padding: 15px;
-}
-.book-title {
-  font-weight: bold;
-}
-.book-action-btns {
-  text-align: center;
-  top: 400px;
-  padding-bottom: 20px !important;
-}
 .book-action-btns button {
   width: 120px;
 }
@@ -117,15 +54,9 @@
   background-color: #e20069;
   color: white;
   border: none;
-  padding: 5px 10px 5px 10px;
+  padding: px 10px 5px 10px;
+  margin-top: 20px;
 }
 .addtocard-btn {
   margin-right: 20px;
-}
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  .book-detail-hldr {
-    display: flex;
-    flex-direction: column;
-  }
 }
