Added click functionality to items in cart and collection

--- a/apps/enlight/src/app/components/cart/cart.component.html
+++ b/apps/enlight/src/app/components/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="cartBooks && cartBooks.length">
   <div *ngFor="let book of cartBooks">
-    <mat-card>
+    <mat-card (click)="onBookSelect(book.id)">
       <mat-card-title-group>
         <img
           mat-card-sm-image
