--- a/apps/enlight/src/app/components/home/home.component.html
+++ b/apps/enlight/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
     [smallThumbnail]="tilesData.volumeInfo.imageLinks?.smallThumbnail"
     [bookDescription]="tilesData.volumeInfo.description"
     [bookAuthors]="tilesData.volumeInfo.authors"
-    (click)="OnBookSelect(tilesData.id)"
+    (click)="onBookSelect(tilesData.id)"
   >
   </workspace-card-tile>
 </div>
