Changed color of submit button to be in sync with rest of the application

--- a/apps/enlight/src/app/components/billing/billing.component.html
+++ b/apps/enlight/src/app/components/billing/billing.component.html
@@ -55,9 +55,9 @@
             <mat-error>Missing address.</mat-error>
           </mat-form-field>
           <button
+            class="addtocard-btn book-btn"
             type="submit"
             mat-raised-button
-            color="primary"
             [disabled]="loginForm.invalid"
             (click)="openDialog()"
           >
