--- a/apps/enlight/src/app/components/billing/billing.component.scss
+++ b/apps/enlight/src/app/components/billing/billing.component.scss
@@ -45,3 +45,13 @@ mat-form-field {
     }
   }
 }
+
+.book-btn {
+  background-color: #e20069;
+  color: white;
+  border: none;
+  padding: 5px 10px 5px 10px;
+}
+.addtocard-btn {
+  margin: 20px;
+}
