Changed linting rules to have poc as prefix for components and modules

--- a/apps/enlight/src/app/components/detail/detail.component.html
+++ b/apps/enlight/src/app/components/detail/detail.component.html
@@ -17,10 +17,10 @@
       <div class="description-hldr">
         <div class="description-title">
           Rating :
-          <workspace-star-rating
+          <poc-star-rating
             class="description-detail"
             [rating]="selectedBook.volumeInfo.averageRating"
-          ></workspace-star-rating>
+          ></poc-star-rating>
         </div>
       </div>
       <div class="description-hldr">
