--- a/apps/enlight/src/app/app.component.html
+++ b/apps/enlight/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="main-container">
-  <workspace-ui-side-nav class="ui-sidenav-container"></workspace-ui-side-nav>
+  <poc-ui-side-nav class="ui-sidenav-container"></poc-ui-side-nav>
 </div>
