--- a/apps/enlight/src/app/components/home/home.component.html
+++ b/apps/enlight/src/app/components/home/home.component.html
@@ -1,10 +1,8 @@
 <div class="home-wrapper">
   <div class="search-wrapper">
-    <workspace-ui-search-bar
-      [placeholder]="'Search in Library'"
-    ></workspace-ui-search-bar>
+    <poc-ui-search-bar [placeholder]="'Search in Library'"></poc-ui-search-bar>
   </div>
-  <workspace-card-tile
+  <poc-card-tile
     *ngFor="let tilesData of booksRecords$ | async"
     [bookTitle]="tilesData.volumeInfo.title"
     [bookSubTitle]="tilesData.volumeInfo.subtitle"
@@ -13,5 +11,5 @@
     [bookAuthors]="tilesData.volumeInfo.authors"
     (click)="onBookSelect(tilesData.id)"
   >
-  </workspace-card-tile>
+  </poc-card-tile>
 </div>
