--- a/apps/enlight/src/app/components/billing/billing.component.html
+++ b/apps/enlight/src/app/components/billing/billing.component.html
@@ -59,7 +59,7 @@
             type="submit"
             mat-raised-button
             [disabled]="loginForm.invalid"
-            (click)="openDialog()"
+            (click)="onSubmit()"
           >
             Submit
           </button>
